<resources>
    <string name="app_name">GastoViagem</string>

    <string name="total_de_quilometros">Total de quilômetros</string>
    <string name="distancia">Distância</string>

    <string name="preco">Preço</string>
    <string name="preco_por_litro">Preço por litro</string>

    <string name="autonomia">Autonomia</string>
    <string name="km_por_litro">Km por litro</string>

    <string name="gasto_total">Gasto total será de: </string>
    <string name="valor_total">R$ 0</string>
    <string name="calcular">Calcular</string>

    //errors

    <string name="error_distancia">Informe a distância</string>
    <string name="error_preco">Informe o preço</string>
    <string name="error_autonomia">Informe a autonomia</string>
    <string name="error_validacao">Preencha todos os campos</string>

</resources>